Beginning of Registration Page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 		<title>La Boutique Française - 100% Made in France</title>
 		<meta name="description" content="La boutique spécialisée dans la fabrication Made In France">
 
-		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 
 		<link
 		href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -66,7 +66,7 @@
 				</p>
 			</footer>
 		</main>
-        <script src="https://unpkg.com/feather-icons"></script>
+		<script src="https://unpkg.com/feather-icons"></script>
 		<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
 		<script src="{{ asset('assets/js/global.js') }}"></script>
 	</body>
