--- a/templates/register/registration.html.twig
+++ b/templates/register/registration.html.twig
@@ -4,9 +4,9 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container my
-    
-    -5">
+	<div class="container my-5">
 		<h1>Inscription</h1>
+
+        {{ form(registerForm) }}
 	</div>
 {% endblock %}
