--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -1,21 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Hello LoginController!
+{% endblock %}
 
 {% block body %}
-    <div class="container my-5">
-        {% if error %}
-            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+	<div class="container my-5">
+		{% if error %}
+			<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-        <form action="{{ path('app_login') }}" method="post">
-            <label for="username">Email: </label>
-            <input type="text" id="username" name="_username" value={{ last_username }}>
+		<form action="{{ path('app_login') }}" method="post">
+			<label for="username">Email:
+			</label>
+			<input class="form-control" type="text" id="username" name="_username" value={{ last_username }}>
 
-            <label for="password">Mot de passe</label>
-            <input type="password" id="password" name="_password">
+			<label for="password mt-3">Mot de passe</label>
+			<input class="form-control" type="password" id="password" name="_password">
 
-            <button type="submit">Connexion</button>
-        </form>
-    </div>
+			<button type="submit" class="btn btn-success mt-3">Connexion</button>
+		</form>
+	</div>
 {% endblock %}
